--- a/usersguide/javahelp/org/netbeans/modules/usersguide/ide.css
+++ b/usersguide/javahelp/org/netbeans/modules/usersguide/ide.css
@@ -1,13 +1,26 @@
 /*
- * ffj.css	08/10/2001
+ * ide.css      10/19/2001
  *
  * Copyright 2001 Sun Microsystems, Inc. All rights reserved.
  * Use is subject to license terms.
  *
+ * Use only with JH1.1.2 or later release.
+ * DO NOT USE WITH JavaHelp 1.1.1.  This CSS triggers a printing 
+ * bug with JH1.1.1 that causes printing of multiple blank pages..  
+ *
+ * Changes:
+ * Sept. 2001
+ * <p> now has margin-top and margin-bottom = 5, instead of margin-top = 10.
+ * <h2>, <h3>, and <h4> now use margin-top = 10 instead of margin-top = 15.
+ *Oct. 2001
+ * Changed default body font from single SansSerif font to 
+ * standard list of sans serif fonts plus SansSerif.
+ * For table, td, and th tags, border-color changed to silver, a light gray color.
+ * Margin for <ol> changed to 14 to match <ul> margin.
  */
 
 body  {font-size: small;
-	font-family: SansSerif;
+	font-family: Arial, Helvetica, sans-serif, SansSerif;
 	margin-left: 5;
 	margin-right: 5;
 	color: Black;
@@ -34,32 +47,32 @@ h4 { font-size: small;
 
 ol {margin-top: 5;
      margin-bottom: 0;
-     margin-left: 16}
+     margin-left: 14}
 
 li {margin-top: 0;
     margin-bottom: 5}
-	
+        
 li p{margin-top: 5;
-	margin-bottom: 0}
+        margin-bottom: 0}
 
 ul {margin-top: 5;
     margin-bottom: 0;
     margin-left: 14}
-	
-table {border-color: lightGray;
-        border-style: solid;
-        margin-top: 5;
-        margin-bottom: 5}
+        
+table { border-style: solid;
+            border-color: silver;
+			margin-top: 5;
+			margin-bottom: 5}
 
-td {  border-color: lightGray;
-        border-style: solid;
-        padding-left: 1;
-        padding-right: 1;
-        padding-top: 1;
-        padding-bottom: 1}
+td { border-style: solid;
+       border-color: silver;
+		padding-left: 1;
+		padding-right: 1;
+		padding-top: 1;
+		padding-bottom: 1}
 
-th {  border-color: lightGray;
-        border-style: solid;
+th {  border-style: solid;
+        border-color: silver;
         padding-left: 1;
         padding-right: 1;
         padding-top: 1;
