--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeCharacterReferenceCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeCharacterReferenceCustomizer.form
@@ -10,10 +10,10 @@
     <Component class="javax.swing.JLabel" name="nameLabel">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_CharRef_name" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_CharRef_name" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
         </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="nameField" type="code"/>
+          <Connection component="nameField" type="bean"/>
         </Property>
       </Properties>
       <Constraints>
