--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeDocumentCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeDocumentCustomizer.form
@@ -10,10 +10,10 @@
     <Component class="javax.swing.JLabel" name="versionLabel">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_document_version" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_document_version" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
         </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="cbVersion" type="code"/>
+          <Connection component="cbVersion" type="bean"/>
         </Property>
       </Properties>
       <Constraints>
@@ -25,10 +25,10 @@
     <Component class="javax.swing.JLabel" name="encodingLabel">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_document_encoding" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_document_encoding" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
         </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="cbEncoding" type="code"/>
+          <Connection component="cbEncoding" type="bean"/>
         </Property>
       </Properties>
       <Constraints>
@@ -40,10 +40,10 @@
     <Component class="javax.swing.JLabel" name="standaloneLabel">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_document_standalone" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_document_standalone" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
         </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="cbStandalone" type="code"/>
+          <Connection component="cbStandalone" type="bean"/>
         </Property>
       </Properties>
       <Constraints>
