--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeNotationDeclCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeNotationDeclCustomizer.form
@@ -10,10 +10,10 @@
     <Component class="javax.swing.JLabel" name="nameLabel">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_dtdNotationName" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_dtdNotationName" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
         </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="nameField" type="code"/>
+          <Connection component="nameField" type="bean"/>
         </Property>
       </Properties>
       <Constraints>
@@ -40,10 +40,10 @@
     <Component class="javax.swing.JLabel" name="publicLabel">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_dtdNotationPublicId" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_dtdNotationPublicId" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
         </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="publicField" type="code"/>
+          <Connection component="publicField" type="bean"/>
         </Property>
       </Properties>
       <Constraints>
@@ -67,10 +67,10 @@
     <Component class="javax.swing.JLabel" name="systemLabel">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="tax/src/org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_dtdNotationSystemId" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
+          <ResourceString bundle="org/netbeans/modules/xml/tax/beans/customizer/Bundle.properties" key="PROP_dtdNotationSystemId" replaceFormat="Util.getString (&quot;{key}&quot;)"/>
         </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="systemField" type="code"/>
+          <Connection component="systemField" type="bean"/>
         </Property>
       </Properties>
       <Constraints>
