--- a/form/build.xml
+++ b/form/build.xml
@@ -59,7 +59,7 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="release">
     <copy todir="netbeans">
-      <fileset dir="release" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
+      <fileset dir="release"/>
     </copy>
   </target>
 
