--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeAttributeCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeAttributeCustomizer.form
@@ -24,7 +24,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="nameField">
       <Properties>
-        <Property name="columns" type="int" value="23"/>
+        <Property name="columns" type="int" value="20"/>
       </Properties>
 
       <Events>
@@ -53,6 +53,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="valueField">
+      <Properties>
+        <Property name="columns" type="int" value="20"/>
+      </Properties>
 
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="valueFieldActionPerformed"/>
