--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeDocumentTypeCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeDocumentTypeCustomizer.form
@@ -24,7 +24,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="nameField">
       <Properties>
-        <Property name="columns" type="int" value="23"/>
+        <Property name="columns" type="int" value="20"/>
       </Properties>
 
       <Events>
@@ -53,6 +53,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="publicField">
+      <Properties>
+        <Property name="columns" type="int" value="20"/>
+      </Properties>
 
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="publicFieldActionPerformed"/>
@@ -80,6 +83,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="systemField">
+      <Properties>
+        <Property name="columns" type="int" value="20"/>
+      </Properties>
 
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="systemFieldActionPerformed"/>
@@ -94,9 +100,6 @@
     <Container class="javax.swing.JPanel" name="fillPanel">
       <Properties>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[0, 0]"/>
-        </Property>
-        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[0, 0]"/>
         </Property>
       </Properties>
