--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeElementDeclCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeElementDeclCustomizer.form
@@ -52,6 +52,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="contentField">
+      <Properties>
+        <Property name="columns" type="int" value="20"/>
+      </Properties>
 
       <Events>
         <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="contentFieldFocusGained"/>
@@ -67,9 +70,7 @@
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[0, 0]"/>
         </Property>
-        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[0, 0]"/>
-        </Property>
+        <Property name="name" type="java.lang.String" value="null"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
