--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeProcessingInstructionCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeProcessingInstructionCustomizer.form
@@ -3,10 +3,7 @@
 <Form version="1.0" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[380, 250]"/>
-    </Property>
-    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[380, 250]"/>
+      <Dimension value="[350, 230]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -32,7 +29,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="targetField">
       <Properties>
-        <Property name="columns" type="int" value="23"/>
+        <Property name="columns" type="int" value="20"/>
       </Properties>
 
       <Events>
@@ -46,6 +43,11 @@
       </Constraints>
     </Component>
     <Container class="javax.swing.JPanel" name="dataPanel">
+      <Properties>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[350, 230]"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
           <GridBagConstraints gridX="-1" gridY="-1" gridWidth="0" gridHeight="0" fill="1" ipadX="0" ipadY="0" insetsTop="12" insetsLeft="12" insetsBottom="0" insetsRight="11" anchor="10" weightX="0.0" weightY="1.0"/>
