--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/editor/TreeElementAttributeListCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/editor/TreeElementAttributeListCustomizer.form
@@ -3,10 +3,7 @@
 <Form version="1.0" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[450, 250]"/>
-    </Property>
-    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[450, 250]"/>
+      <Dimension value="[350, 230]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -25,6 +22,11 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTable" name="attrTable">
+          <Properties>
+            <Property name="preferredScrollableViewportSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[200, 150]"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
