Bug #19684: Replaced JEditorPane with JTextArea -- JEditorPane caused problems with scroll-bars.

--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeConditionalSectionCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeConditionalSectionCustomizer.form
@@ -61,7 +61,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JEditorPane" name="ignoredContentPane">
+        <Component class="javax.swing.JTextArea" name="ignoredContentTextArea">
         </Component>
       </SubComponents>
     </Container>
