--- a/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeProcessingInstructionCustomizer.form
+++ b/xml.tax/src/org/netbeans/modules/xml/tax/beans/customizer/TreeProcessingInstructionCustomizer.form
@@ -65,11 +65,11 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JEditorPane" name="dataPane">
+            <Component class="javax.swing.JTextArea" name="dataTextArea">
 
               <Events>
-                <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="dataPaneFocusLost"/>
-                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="dataPaneKeyPressed"/>
+                <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="dataTextAreaFocusLost"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="dataTextAreaKeyPressed"/>
               </Events>
             </Component>
           </SubComponents>
